--- a/GUI/nbproject/project.properties
+++ b/GUI/nbproject/project.properties
@@ -27,9 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/GUI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.archivador.jar=..\\archivador.jar
+file.reference.Compilador.jar=..\\Compilador.jar
+file.reference.Controlador.jar=..\\Controlador.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.Compilador.jar}:\
+    ${file.reference.Controlador.jar}:\
+    ${file.reference.archivador.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
